added presentation section and a booking section

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
             <a href="people.html">People</a>
             <a href="work.html">Artists We Admire</a>
             <a href="live.html">Live</a>
+            <a href="presentation/">Open House Slides</a>
         </nav>
     </header>
 
@@ -68,7 +69,7 @@
             <h2>Open House Event</h2>
             <div class="event-box">
                 <p><strong>Art & Computation Open House</strong><br>
-                Monday, January 26, 2026<br>
+                Tuesday, January 27, 2026<br>
                 6:30 - 9:00 PM<br>
                 College Building, Room 521</p>
                 <p>Meet faculty. See work. Ask questions.</p>
