--- a/live.html
+++ b/live.html
@@ -39,6 +39,7 @@
             <span id="slide-counter">1 / 128</span>
             <button id="next-slide">Next →</button>
             <button id="pause-play">Pause</button>
+            <button id="fullscreen-btn">Fullscreen</button>
         </div>
 
         <div id="slideshow-container" class="slideshow-container">
