--- a/people.html
+++ b/people.html
@@ -54,7 +54,7 @@
                 <li><a href="https://travesssmalley.com" target="_blank">Travess Smalley</a></li>
                 <li><a href="https://viktortimofeev.com" target="_blank">Viktor Timofeev</a></li>
                 <li><a href="https://clementvalla.com" target="_blank">Clement Valla</a></li>
-                <li><a href="http://taehee-whang.com" target="_blank">Taehee Whang</a></li>
+                <li><a href="http://taehee.xyz" target="_blank">taehee yoonseul</a></li>
             </ul>
         </section>
 
