--- a/sidebar.html
+++ b/sidebar.html
@@ -9,6 +9,7 @@
     <a href="people.html">People</a>
     <a href="work.html">Artists We Admire</a>
     <a href="live.html">Live</a>
+    <a href="presentation/">Open House Slides</a>
 </nav>
 
 <!-- Department Links -->
