--- a/work-archive.html
+++ b/work-archive.html
@@ -50,206 +50,152 @@
         </section>
 
         <section class="gallery" id="gallery">
+            <!-- Student images -->
             <div class="gallery-item" data-category="student generative">
-                <img src="images/ctc_01.png" alt="">
-            </div>
-            <div class="gallery-item" data-category="student physical">
-                <img src="images/ctc_02.jpg" alt="">
-            </div>
-            <div class="gallery-item" data-category="student generative">
-                <img src="images/ctc_03.jpg" alt="">
-            </div>
-            <div class="gallery-item" data-category="student generative">
-                <img src="images/ctc_04.jpg" alt="">
-            </div>
-            <div class="gallery-item" data-category="student 3d">
-                <img src="images/ctc_05.jpg" alt="">
-            </div>
-            <div class="gallery-item" data-category="student generative">
-                <img src="images/ctc_06.jpg" alt="">
-            </div>
-            <div class="gallery-item" data-category="student generative">
-                <img src="images/ctc_07.jpg" alt="">
-            </div>
-            <div class="gallery-item" data-category="student generative">
-                <img src="images/ctc_08.jpg" alt="">
+                <img src="images/students/ctc_01.jpg" alt="">
             </div>
             <div class="gallery-item" data-category="student web">
-                <img src="images/ctc_09.jpg" alt="">
+                <img src="images/students/ctc_09.jpg" alt="">
             </div>
             <div class="gallery-item" data-category="student web">
-                <img src="images/ctc_10.jpg" alt="">
-            </div>
-            <div class="gallery-item" data-category="student generative">
-                <img src="images/ctc_11.jpg" alt="">
-            </div>
-            <div class="gallery-item" data-category="student web">
-                <img src="images/ctc_12.jpg" alt="">
-            </div>
-            <div class="gallery-item" data-category="student web">
-                <img src="images/ctc_13.jpg" alt="">
-            </div>
-            <div class="gallery-item" data-category="student generative">
-                <img src="images/ctc_14.jpg" alt="">
+                <img src="images/students/ctc_12.jpg" alt="">
             </div>
             <div class="gallery-item" data-category="student installation">
-                <img src="images/ctc_15.jpg" alt="">
+                <img src="images/students/ctc_15.jpg" alt="">
             </div>
             <div class="gallery-item" data-category="student web">
-                <img src="images/ctc_16.jpg" alt="">
+                <img src="images/students/ctc_17.jpg" alt="">
             </div>
             <div class="gallery-item" data-category="student web">
-                <img src="images/ctc_17.jpg" alt="">
+                <img src="images/students/ctc_27.jpg" alt="">
+            </div>
+            <div class="gallery-item" data-category="student generative">
+                <img src="images/students/ctc_28.jpg" alt="">
+            </div>
+            <div class="gallery-item" data-category="student generative">
+                <img src="images/students/ctc_37.jpg" alt="">
+            </div>
+            <div class="gallery-item" data-category="student generative">
+                <img src="images/students/ctc_46.jpg" alt="">
+            </div>
+            <div class="gallery-item" data-category="student generative">
+                <img src="images/students/ctc_47.jpg" alt="">
+            </div>
+            <div class="gallery-item" data-category="student generative">
+                <img src="images/students/ctc_48.jpg" alt="">
             </div>
             <div class="gallery-item" data-category="student web">
-                <img src="images/ctc_18.jpg" alt="">
+                <img src="images/students/ctc_49.jpg" alt="">
             </div>
             <div class="gallery-item" data-category="student generative">
-                <img src="images/ctc_19.jpg" alt="">
+                <img src="images/students/ctc_51.jpg" alt="">
             </div>
             <div class="gallery-item" data-category="student generative">
-                <img src="images/ctc_21.jpg" alt="">
+                <img src="images/students/ctc_52.jpg" alt="">
             </div>
             <div class="gallery-item" data-category="student generative">
-                <img src="images/ctc_22.jpg" alt="">
+                <img src="images/students/ctc_53.jpg" alt="">
             </div>
             <div class="gallery-item" data-category="student generative">
-                <img src="images/ctc_23.jpg" alt="">
+                <img src="images/students/ctc_54.jpg" alt="">
             </div>
             <div class="gallery-item" data-category="student generative">
-                <img src="images/ctc_24.jpg" alt="">
+                <img src="images/students/ctc_59.jpg" alt="">
             </div>
             <div class="gallery-item" data-category="student generative">
-                <img src="images/ctc_25.jpg" alt="">
-            </div>
-            <div class="gallery-item" data-category="student generative physical">
-                <img src="images/ctc_26.png" alt="">
-            </div>
-            <div class="gallery-item" data-category="student web">
-                <img src="images/ctc_27.jpg" alt="">
+                <img src="images/students/ctc_60.jpg" alt="">
             </div>
             <div class="gallery-item" data-category="student generative">
-                <img src="images/ctc_28.png" alt="">
+                <img src="images/students/ctc_61.jpg" alt="">
             </div>
-            <div class="gallery-item" data-category="student generative">
-                <img src="images/ctc_29.jpg" alt="">
+            <!-- Faculty images -->
+            <div class="gallery-item" data-category="faculty generative">
+                <img src="images/faculty/ctc_04.jpg" alt="">
             </div>
-            <div class="gallery-item" data-category="student web">
-                <img src="images/ctc_31.jpg" alt="">
+            <div class="gallery-item" data-category="faculty 3d">
+                <img src="images/faculty/ctc_05.jpg" alt="">
             </div>
-            <div class="gallery-item" data-category="student web">
-                <img src="images/ctc_32.jpg" alt="">
+            <div class="gallery-item" data-category="faculty generative">
+                <img src="images/faculty/ctc_07.jpg" alt="">
             </div>
-            <div class="gallery-item" data-category="student web">
-                <img src="images/ctc_33.jpg" alt="">
+            <div class="gallery-item" data-category="faculty generative">
+                <img src="images/faculty/ctc_08.jpg" alt="">
             </div>
-            <div class="gallery-item" data-category="student web">
-                <img src="images/ctc_34.jpg" alt="">
+            <div class="gallery-item" data-category="faculty web">
+                <img src="images/faculty/ctc_10.jpg" alt="">
             </div>
-            <div class="gallery-item" data-category="student web">
-                <img src="images/ctc_35.jpg" alt="">
+            <div class="gallery-item" data-category="faculty generative">
+                <img src="images/faculty/ctc_23.jpg" alt="">
             </div>
-            <div class="gallery-item" data-category="student web">
-                <img src="images/ctc_36.jpg" alt="">
+            <div class="gallery-item" data-category="faculty generative">
+                <img src="images/faculty/ctc_24.jpg" alt="">
             </div>
-            <div class="gallery-item" data-category="student generative">
-                <img src="images/ctc_37.png" alt="">
+            <div class="gallery-item" data-category="faculty generative">
+                <img src="images/faculty/ctc_25.jpg" alt="">
             </div>
-            <div class="gallery-item" data-category="student generative ai">
-                <img src="images/ctc_38.jpg" alt="">
+            <div class="gallery-item" data-category="faculty generative physical">
+                <img src="images/faculty/ctc_26.jpg" alt="">
             </div>
-            <div class="gallery-item" data-category="student generative">
-                <img src="images/ctc_39.png" alt="">
+            <div class="gallery-item" data-category="faculty web">
+                <img src="images/faculty/ctc_32.jpg" alt="">
             </div>
-            <div class="gallery-item" data-category="student generative">
-                <img src="images/ctc_40.jpg" alt="">
+            <div class="gallery-item" data-category="faculty web">
+                <img src="images/faculty/ctc_33.jpg" alt="">
             </div>
-            <div class="gallery-item" data-category="student web">
-                <img src="images/ctc_41.jpg" alt="">
+            <div class="gallery-item" data-category="faculty web">
+                <img src="images/faculty/ctc_34.jpg" alt="">
             </div>
-            <div class="gallery-item" data-category="student web">
-                <img src="images/ctc_42.jpg" alt="">
+            <div class="gallery-item" data-category="faculty web">
+                <img src="images/faculty/ctc_35.jpg" alt="">
             </div>
-            <div class="gallery-item" data-category="student generative">
-                <img src="images/ctc_43.jpg" alt="">
+            <div class="gallery-item" data-category="faculty web">
+                <img src="images/faculty/ctc_36.jpg" alt="">
             </div>
-            <div class="gallery-item" data-category="student generative">
-                <img src="images/ctc_44.png" alt="">
+            <div class="gallery-item" data-category="faculty generative">
+                <img src="images/faculty/ctc_39.jpg" alt="">
             </div>
-            <div class="gallery-item" data-category="student physical">
-                <img src="images/ctc_45.jpg" alt="">
+            <div class="gallery-item" data-category="faculty generative">
+                <img src="images/faculty/ctc_40.jpg" alt="">
             </div>
-            <div class="gallery-item" data-category="student generative">
-                <img src="images/ctc_46.png" alt="">
+            <div class="gallery-item" data-category="faculty web">
+                <img src="images/faculty/ctc_41.jpg" alt="">
             </div>
-            <div class="gallery-item" data-category="student generative">
-                <img src="images/ctc_47.png" alt="">
+            <div class="gallery-item" data-category="faculty generative">
+                <img src="images/faculty/ctc_43.jpg" alt="">
             </div>
-            <div class="gallery-item" data-category="student generative">
-                <img src="images/ctc_48.png" alt="">
+            <div class="gallery-item" data-category="faculty generative">
+                <img src="images/faculty/ctc_44.jpg" alt="">
             </div>
-            <div class="gallery-item" data-category="student web">
-                <img src="images/ctc_49.png" alt="">
+            <div class="gallery-item" data-category="faculty physical">
+                <img src="images/faculty/ctc_45.jpg" alt="">
             </div>
-            <div class="gallery-item" data-category="student generative">
-                <img src="images/ctc_50.png" alt="">
-            </div>
-            <div class="gallery-item" data-category="student generative">
-                <img src="images/ctc_51.png" alt="">
-            </div>
-            <div class="gallery-item" data-category="faculty generative ai">
-                <img src="images/ctc_52.jpg" alt="">
-            </div>
-            <div class="gallery-item" data-category="student generative">
-                <img src="images/ctc_53.png" alt="">
-            </div>
-            <div class="gallery-item" data-category="student generative">
-                <img src="images/ctc_54.png" alt="">
+            <div class="gallery-item" data-category="faculty generative">
+                <img src="images/faculty/ctc_50.jpg" alt="">
             </div>
             <div class="gallery-item" data-category="faculty ai">
-                <img src="images/ctc_55.jpg" alt="">
+                <img src="images/faculty/ctc_55.jpg" alt="">
+            </div>
+            <!-- Student work photos -->
+            <div class="gallery-item" data-category="student generative physical">
+                <img src="images/students/DSC06342.jpg" alt="">
+            </div>
+            <div class="gallery-item" data-category="student physical">
+                <img src="images/happening/DSC06351.jpg" alt="">
+            </div>
+            <div class="gallery-item" data-category="student physical">
+                <img src="images/happening/DSC06354.jpg" alt="">
+            </div>
+            <div class="gallery-item" data-category="student physical">
+                <img src="images/happening/DSC06360.jpg" alt="">
+            </div>
+            <div class="gallery-item" data-category="student physical">
+                <img src="images/students/2025-09-25 11.38.30.jpg" alt="">
             </div>
             <div class="gallery-item" data-category="student generative">
-                <img src="images/ctc_56.png" alt="">
-            </div>
-            <div class="gallery-item" data-category="student generative">
-                <img src="images/ctc_57.png" alt="">
-            </div>
-            <div class="gallery-item" data-category="student generative">
-                <img src="images/ctc_58.png" alt="">
-            </div>
-            <div class="gallery-item" data-category="student generative">
-                <img src="images/ctc_59.png" alt="">
-            </div>
-            <div class="gallery-item" data-category="student generative">
-                <img src="images/ctc_60.png" alt="">
-            </div>
-            <div class="gallery-item" data-category="student generative">
-                <img src="images/ctc_61.png" alt="">
+                <img src="images/students/2025-09-25 11.38.45.jpg" alt="">
             </div>
             <div class="gallery-item" data-category="student generative physical">
-                <img src="images/DSC06342.jpg" alt="">
-            </div>
-            <div class="gallery-item" data-category="student generative physical">
-                <img src="images/DSC06343.jpg" alt="">
-            </div>
-            <div class="gallery-item" data-category="student physical">
-                <img src="images/DSC06351.jpg" alt="">
-            </div>
-            <div class="gallery-item" data-category="student physical">
-                <img src="images/DSC06354.jpg" alt="">
-            </div>
-            <div class="gallery-item" data-category="student physical">
-                <img src="images/DSC06360.jpg" alt="">
-            </div>
-            <div class="gallery-item" data-category="student physical">
-                <img src="images/2025-09-25 11.38.30.jpg" alt="">
-            </div>
-            <div class="gallery-item" data-category="student generative">
-                <img src="images/2025-09-25 11.38.45.jpg" alt="">
-            </div>
-            <div class="gallery-item" data-category="student generative physical">
-                <img src="images/2025-09-25 11.40.12.jpg" alt="">
+                <img src="images/students/2025-09-25 11.40.12.jpg" alt="">
             </div>
         </section>
     </main>
