--- a/events.html
+++ b/events.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Events — Art & Computation at RISD</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <canvas id="draw-layer"></canvas>
@@ -32,27 +32,6 @@
         <h2>Upcoming Events</h2>
 
         <section>
-            <h3>Open House</h3>
-            <div class="event-box">
-                <p><strong>Art & Computation Open House</strong><br>
-                Monday, January 26, 2026<br>
-                6:30 - 9:00 PM<br>
-                College Building, Room 521</p>
-                <p>Meet faculty. See work. Ask questions.</p>
-            </div>
-        </section>
-
-        <section>
-            <h3>Script a Shirt</h3>
-            <div class="event-box">
-                <p><strong>Script a Shirt</strong><br>
-                College Building 521</p>
-                <p>Build an algorithm that designs custom art for clothes. For first year students curious about Art and Computation.</p>
-                <p>Email to sign up: <a href="mailto:artandcomputation@risd.edu">artandcomputation@risd.edu</a></p>
-            </div>
-        </section>
-
-        <section>
             <h2>Stop Making Sense</h2>
             <p>A lecture series featuring artists, technologists, and critical thinkers working at the intersection of art and computation. Part of the AaC course taught by Marisa Mazria Katz.</p>
 
@@ -61,13 +40,13 @@
 
                 <div class="lecture-week">
                     <div class="week-header">
-                        <strong>Sam Lavigne / Tega Brain</strong>
+                        <strong>Sam Lavigne &amp; Tega Brain</strong>
                     </div>
                     <div class="lecture-dates">
-                        <span class="date">Thursday Feb 19</span>
+                        <span class="date">Thursday Feb 19, 6:30 PM</span>
                     </div>
                     <div class="lecture-info">
-                        <p>Prov/Wash Auditorium</p>
+                        <p>CB 412</p>
                     </div>
                 </div>
 
@@ -76,82 +55,114 @@
                         <strong>Roopa Vasudevan</strong>
                     </div>
                     <div class="lecture-dates">
-                        <span class="date">Thursday Feb 26</span>
+                        <span class="date">Thursday Feb 26, 6:30 PM</span>
                     </div>
                     <div class="lecture-info">
-                        <p>Location TBA</p>
+                        <p>CB 521</p>
                     </div>
                 </div>
 
                 <div class="lecture-week">
                     <div class="week-header">
-                        <strong>Surya Mattu</strong>
+                        <strong>Surya Mattu</strong><br>
+                        Moderated by Reuben Fischer-Baum (Yahoo News)
                     </div>
                     <div class="lecture-dates">
-                        <span class="date thursday">Thursday Mar 5</span>
+                        <span class="date">Thursday Mar 5, 6:30 PM</span>
                     </div>
                     <div class="lecture-info">
-                        <p>Prov/Wash Auditorium</p>
+                        <p>CB 412</p>
                     </div>
                 </div>
 
                 <div class="lecture-week">
                     <div class="week-header">
-                        <strong>Louis Leterrier</strong>
+                        <strong>Lucas Blalock</strong><br>
+                        Moderated by Can Altay (Interior Architecture)
                     </div>
                     <div class="lecture-dates">
-                        <span class="date">Thursday Mar 19</span>
+                        <span class="date">Thursday Mar 12, 6:30 PM</span>
                     </div>
                     <div class="lecture-info">
-                        <p>Prov/Wash Auditorium</p>
+                        <p>CB 412</p>
                     </div>
                 </div>
 
                 <div class="lecture-week">
                     <div class="week-header">
-                        <strong>Rachel Rossin</strong>
+                        <strong>Louis Leterrier</strong><br>
+                        Moderated by Clement Valla (Art &amp; Computation/CTC)
                     </div>
                     <div class="lecture-dates">
-                        <span class="date">Thursday Apr 2</span>
+                        <span class="date">Thursday Mar 19, 6:30 PM</span>
                     </div>
                     <div class="lecture-info">
-                        <p>Prov/Wash Auditorium</p>
+                        <p>CB 412</p>
                     </div>
                 </div>
 
                 <div class="lecture-week">
                     <div class="week-header">
-                        <strong>Brian House</strong>
+                        <strong>Rachel Rossin</strong><br>
+                        Moderated by Jackie Gendel (Painting)
                     </div>
                     <div class="lecture-dates">
-                        <span class="date">Thursday Apr 9</span>
+                        <span class="date">Thursday Apr 2, 6:30 PM</span>
                     </div>
                     <div class="lecture-info">
-                        <p>Prov/Wash Auditorium</p>
+                        <p>CB 412</p>
                     </div>
                 </div>
 
                 <div class="lecture-week">
                     <div class="week-header">
-                        <strong>Paul Myoda</strong>
+                        <strong>Brian House</strong><br>
+                        Moderated by Molly Kelly (HPSS)
                     </div>
                     <div class="lecture-dates">
-                        <span class="date">Thursday Apr 16</span>
+                        <span class="date">Thursday Apr 9, 6:30 PM</span>
                     </div>
                     <div class="lecture-info">
-                        <p>Location TBA</p>
+                        <p>CB 412</p>
                     </div>
                 </div>
 
                 <div class="lecture-week">
                     <div class="week-header">
-                        <strong>Lindsay Caplan</strong>
+                        <strong>Paul Myoda</strong><br>
+                        Moderated by Alejandro Borsani (EFS)
                     </div>
                     <div class="lecture-dates">
-                        <span class="date">Thursday Apr 23</span>
+                        <span class="date">Thursday Apr 16, 6:30 PM</span>
                     </div>
                     <div class="lecture-info">
-                        <p>Prov/Wash Auditorium</p>
+                        <p>CB 412</p>
+                    </div>
+                </div>
+
+                <div class="lecture-week">
+                    <div class="week-header">
+                        <strong>Lindsay Caplan</strong><br>
+                        Moderated by Leora Maltz-Leica (THAD)
+                    </div>
+                    <div class="lecture-dates">
+                        <span class="date">Thursday Apr 23, 6:30 PM</span>
+                    </div>
+                    <div class="lecture-info">
+                        <p>CB 412</p>
+                    </div>
+                </div>
+
+                <div class="lecture-week">
+                    <div class="week-header">
+                        <strong>Theresa Ganz</strong><br>
+                        Moderated by Kenneth Berger (THAD)
+                    </div>
+                    <div class="lecture-dates">
+                        <span class="date">Thursday Apr 30, 6:30 PM</span>
+                    </div>
+                    <div class="lecture-info">
+                        <p>CB 412</p>
                     </div>
                 </div>
             </div>
@@ -169,11 +180,11 @@
         </div>
     </div>
 
-    <script src="load-sidebar.js"></script>
-    <script src="sketches/macpaint-pencil.js"></script>
-    <script src="header-sketches.js"></script>
-    <script src="draw.js"></script>
-    <script src="images-list.js"></script>
-    <script src="slideshow.js"></script>
+    <script src="js/load-sidebar.js"></script>
+    <script src="js/sketches/macpaint-pencil.js"></script>
+    <script src="js/header-sketches.js"></script>
+    <script src="js/draw.js"></script>
+    <script src="js/images-list.js"></script>
+    <script src="js/slideshow.js"></script>
 </body>
 </html>
