--- a/pathways.html
+++ b/pathways.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pathways — Art & Computation at RISD</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
     <style>
         /* Pathways-specific styles */
         .pathways-image-link {
@@ -88,11 +88,11 @@
         </div>
     </div>
 
-    <script src="load-sidebar.js"></script>
-    <script src="sketches/macpaint-pencil.js"></script>
-    <script src="header-sketches.js"></script>
-    <script src="draw.js"></script>
-    <script src="images-list.js"></script>
-    <script src="slideshow.js"></script>
+    <script src="js/load-sidebar.js"></script>
+    <script src="js/sketches/macpaint-pencil.js"></script>
+    <script src="js/header-sketches.js"></script>
+    <script src="js/draw.js"></script>
+    <script src="js/images-list.js"></script>
+    <script src="js/slideshow.js"></script>
 </body>
 </html>
