--- a/work-archive.html
+++ b/work-archive.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Work — Art & Computation at RISD</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <canvas id="draw-layer"></canvas>
@@ -241,10 +241,10 @@
         </div>
     </div>
 
-    <script src="sketches/macpaint-pencil.js"></script>
-    <script src="header-sketches.js"></script>
-    <script src="draw.js"></script>
-    <script src="slideshow.js"></script>
-    <script src="gallery.js"></script>
+    <script src="js/sketches/macpaint-pencil.js"></script>
+    <script src="js/header-sketches.js"></script>
+    <script src="js/draw.js"></script>
+    <script src="js/slideshow.js"></script>
+    <script src="js/gallery.js"></script>
 </body>
 </html>
